--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="contains__img">
     <div class="card__front">
-      <span class="card__logo"><img src="./interactive-card/images/card-logo.svg" alt=""></span>
+      <span class="card__logo"><img src="./interactive-card/images/card-logo.svg"></span>
       <p class="number_in_card"></p>
       <p class="name_in_card">Juan Pérez</p>
       <span class="date_in_card">
@@ -48,7 +48,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
